[gd_scene load_steps=9 format=3 uid="uid://c2h65ntylr8fa"]

[ext_resource type="Script" path="res://scripts/falling_enemy.gd" id="1_8yook"]
[ext_resource type="Texture2D" uid="uid://daeuxk8kcsthn" path="res://assets/Tiles/Characters/tile_0011.png" id="1_mn57x"]
[ext_resource type="Texture2D" uid="uid://5hsqw01jcoa8" path="res://assets/Tiles/Characters/tile_0012.png" id="1_pfk7d"]
[ext_resource type="PackedScene" uid="uid://bfobr8wcx6cjb" path="res://scenes/enemy_zone.tscn" id="2_ayhfl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ahyvg"]
atlas = ExtResource("1_pfk7d")
region = Rect2(0, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_tv6wb"]
atlas = ExtResource("1_mn57x")
region = Rect2(0, 0, 24, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_2vblc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahyvg")
}],
"loop": true,
"name": &"falling",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tv6wb")
}],
"loop": false,
"name": &"idle",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ejsl4"]
size = Vector2(18, 18)

[node name="FallingEnemy" type="Node2D"]
position = Vector2(0, -64)
script = ExtResource("1_8yook")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 3
sprite_frames = SubResource("SpriteFrames_2vblc")
animation = &"idle"

[node name="EnemyZone" parent="." instance=ExtResource("2_ayhfl")]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyZone"]
shape = SubResource("RectangleShape2D_ejsl4")

[node name="RayCastDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 67)
collision_mask = 2

[node name="RayCastUp" type="RayCast2D" parent="."]
target_position = Vector2(0, 11)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="ready" from="." to="EnemyZone" method="_on_node_2d_ready"]
[connection signal="ready" from="AnimatedSprite2D" to="EnemyZone" method="_on_animated_sprite_2d_ready"]
[connection signal="body_entered" from="EnemyZone" to="EnemyZone" method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
